# sl-cpp

./: .gitignore  CMakeLists.txt  README.md
_vendor/: CMakeLists.txt
_vendor/catch2/: CMakeLists.txt
_vendor/sqlite/: CMakeLists.txt
cmake/: common.cmake  local-llvm-toolchain.cmake  modules.cmake  test.cmake
lib/: CMakeLists.txt
lib/first/: CMakeLists.txt  stdlib.cxx
lib/first/src/: main.cpp  one.cpp
lib/sl-core/: CMakeLists.txt
lib/sl-core/inc/io/unix/: mapped-view.h
lib/sl-core/inc/logging/: logger.h
lib/sl-core/inc/mem/: allocator.h
lib/sl-core/inc/utils/: lazy.h  math.h  strings.h
lib/sl-core/src/config/: json.cpp  mod.cpp  values.cpp
lib/sl-core/src/io/: cache-hint.cpp  error.cpp  load.cpp  mod.cpp
lib/sl-core/src/io/unix/: mapped-file.cpp  mapped-view.cpp
lib/sl-core/src/io/win/: mapped-file.cpp  mapped-view.cpp
lib/sl-core/src/logging/: logger.cpp  mod.cpp
lib/sl-core/src/mem/: allocator.cpp  mod.cpp
lib/sl-core/src/utils/: fs.cpp  lazy.cpp  mod.cpp  noncopyable.cpp  pointers.cpp  strings.cpp
lib/sl-core/tests/: allocator-test.cpp  config-test.cpp  lazy-test.cpp  strings-test.cpp
lib/sl-uv/: CMakeLists.txt
lib/sl-uv/examples/: loop-demo.cpp
lib/sl-uv/src/: error.cpp  handle.cpp  idler.cpp  loop.cpp  mod.cpp  signaler.cpp  timer.cpp
lib/sl-uv/tests/: idler-test.cpp  timer-test.cpp
scripts/: build.sh  install-local-cmake.sh  install-local-llvm.sh  prepare-build.sh
test/: runner.cpp
test/inc/test/: async.h
